--- a/index.html
+++ b/index.html
@@ -1,55 +1,57 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<style>
-			body {
-				background-color: #ffffff;
-				margin: 0;
-				overflow: hidden;
-			}
-		</style>
-	</head>
-	<body>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.js"></script>
-		<script>
+<head>
+   <title>Iniciando con Three.js</title>
+   <style>canvas { width: 100%; height: 100% }</style>
+</head>
+<body>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.js"></script>                <!--Incluyendo la biblioteca-->
+   <script>
+		
+   //Escena
+   var scene = new THREE.Scene();                  // Creando el objeto escena, donde se añadirán los demás.
+			
+   //Cámara
+   var camera = new THREE.PerspectiveCamera(
+	75,                                        // Ángulo de "grabación" de abajo hacia arriba en grados.
+	window.innerWidth/window.innerHeight,      // Relación de aspecto de la ventana de la cámara(Ejemplo: 16:9).
+	0.1,                                       // Plano de recorte cercano (más cerca no se renderiza).
+	1000                                       // Plano de recorte lejano  (más lejos no se renderiza).
+	);
+			
+   camera.position.z = 5;  //Enviar la cámara hacia atrás para poder ver la geometría. Por defecto es z = 0.
+			
+   //Renderizador
+   var renderer = new THREE.WebGLRenderer({antialias:true}); // Utilizar el renderizador WebGL.
+   renderer.setSize(window.innerWidth, window.innerHeight);  // Renderizador del tamaño de la ventana.
+   document.body.appendChild(renderer.domElement);           // Añadir el renderizador al elemento DOM body.
 
-			var camera, scene, renderer;
-			var geometry, material, mesh;
+  //Geometría
+   var geometry = new THREE.CubeGeometry(1,1,1);   // Crear geometría cúbica con dimensiones(x, y, z).
+   var material = new THREE.MeshLambertMaterial({color: 0xFF0000}); // Crear el material para la
+			                                            // geometría y darle color rojo.
+   var cube = new THREE.Mesh(geometry, material);  // Crear una malla que agrupará la geometría
+			                           // y el material creados anteriormente.
+   scene.add(cube);                                // Añadir la malla al objeto escena.
+			
+   //Luz (requerida para el material MeshLambertMaterial)
+   var light = new THREE.PointLight( 0xFFFF00 ); //  Luz proveniente de un punto en el espacio, 
+		                                 //  semejante al sol.
+   light.position.set( -10, 5, 10 );             //  Localización de la luz. (x, y, z).
+   scene.add( light );                           //  Añadir la luz al objeto escena.
+			
+   // Función para renderizar 
+   var render = function () {
+	requestAnimationFrame(render);           // la renderización ocurrirá continuamente si la escena está visible.
 
-			function init() {
+	cube.rotation.x += 0.03;                 //Velocidad de rotación en el eje x
+	cube.rotation.y += 0.03;                 //Velocidad de rotación en el eje y
 
-				renderer = new THREE.CanvasRenderer();
-				renderer.setSize( window.innerWidth, window.innerHeight );
-				document.body.appendChild( renderer.domElement );
+	renderer.render(scene, camera);          //Renderizar escena cada vez que se ejecuta la función "render()".
+   };
 
-				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 10 );
-				camera.position.z = 3;
+   render();
 
-				scene = new THREE.Scene();
-
-				geometry = new THREE.CubeGeometry( 1, 1, 1 );
-				material = new THREE.MeshBasicMaterial( { color: 0x000000, wireframe: true, wireframeLinewidth: 2 } );
-
-				mesh = new THREE.Mesh( geometry, material );
-				scene.add( mesh );
-
-			}
-
-			function animate() {
-
-				requestAnimationFrame( animate );
-
-				mesh.rotation.x = Date.now() * 0.0005;
-				mesh.rotation.y = Date.now() * 0.001;
-
-				renderer.render( scene, camera );
-
-			}
-
-			init();
-			animate();
-
-		</script>
-	</body>
+   </script>
+</body>
 </html>
