--- a/index.html
+++ b/index.html
@@ -7,47 +7,34 @@
 <body>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.js"></script>                <!--Incluyendo la biblioteca-->
    <script>
-		
-    init();
-    animate();
-
-    function init() {
-
-        camera = new THREE.Camera( 75, window.innerWidth / window.innerHeight, 1, 10000 );
-        camera.position.z = 1000;
-
-        scene = new THREE.Scene();
-
-        geometry = new THREE.CubeGeometry( 200, 200, 200 );
-        material = new THREE.MeshBasicMaterial( { color: 0xff0000, wireframe: true } );
-
-        mesh = new THREE.Mesh( geometry, material );
-        scene.addObject( mesh );
-
-        renderer = new THREE.CanvasRenderer();
-        renderer.setSize( window.innerWidth, window.innerHeight );
-
-        document.body.appendChild( renderer.domElement );
-
-    }
-
-    function animate() {
-
-        // Include examples/js/RequestAnimationFrame.js for cross-browser compatibility.
-        requestAnimationFrame( animate );
-        render();
-
-    }
-
-    function render() {
-
-        mesh.rotation.x += 0.01;
-        mesh.rotation.y += 0.02;
-
-        renderer.render( scene, camera );
-
-    }
-
+		(function(){
+		  var scene = new THREE.Scene();
+		  var camera = new THREE.PerspectiveCamera(
+			75,                                     //Field of View
+			window.innerWidth / window.innerHeight, //aspect ratio
+			0.1,                                    //near clipping plane
+			1000                                    //far clipping plane
+		  );
+		  var renderer = new THREE.WebGLRenderer({
+			alpha: true,    //transparent background
+			antialias: true //smooth edges
+		  });
+		  renderer.setSize(window.innerWidth, window.innerHeight);
+		  document.body.appendChild(renderer.domElement);
+		  var geometry = new THREE.BoxGeometry(1, 1, 1);
+		  var material = new THREE.MeshNormalMaterial();
+		  var cube = new THREE.Mesh(geometry, material);
+		  scene.add(cube);
+		  camera.position.z = 5; //move camera back so we can see the cube
+		  var render = function() {
+			requestAnimationFrame(render);
+			renderer.render(scene, camera);
+			//rotate cube a little each frame
+			cube.rotation.x += 0.05;
+			cube.rotation.y += 0.05;
+		  };
+		  render();
+		})();
    </script>
 </body>
 </html>
