--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <style>canvas { width: 100%; height: 100% }</style>
 </head>
 <body>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.js"></script>                <!--Incluyendo la biblioteca-->
+   <script src="https://ajax.googleapis.com/ajax/libs/threejs/r76/three.min.js"></script>                <!--Incluyendo la biblioteca-->
    <script>
 		(function(){
 		  var scene = new THREE.Scene();
